<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_kidmatch"
    tools:context="com.sam.kidmatch.KidMatchActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->
    <!-- 10 sec calculate    -->
    <ImageView
     	    android:id="@+id/img_10sec"
     	    android:layout_width="240dp"
     	    android:layout_height="240dp"
     	    android:layout_gravity="center|top"
     	    
     	    android:contentDescription="@string/element_1"
     	    android:src="@drawable/icon10" 
     	    />
    <!-- 3 SEC calculate -->
    <ImageView
     	    android:id="@+id/img_3sec"
     	    android:layout_width="240dp"
     	    android:layout_height="240dp"
     	    android:layout_gravity="center"
     	    android:contentDescription="@string/element_1"
     	    android:src="@drawable/icon2"
     	    android:visibility="gone" 
     	    />
    <!-- answer -->
    <ImageView
     	    android:id="@+id/img_ans0"
     	    android:layout_width="240dp"
     	    android:layout_height="240dp"
     	    android:layout_gravity="center"
     	    android:contentDescription="@string/answer"
     	    android:src="@drawable/aa01" 
     	    />
    <!-- play -->
    <ImageView
     	    android:id="@+id/img_play"
     	    android:layout_width="240dp"
     	    android:layout_height="240dp"
     	    android:layout_gravity="center"
     	    android:contentDescription="@string/play"
     	    android:src="@drawable/play6"
     	    android:visibility="gone" 
     	    />
    <!-- text for question -->    
    <TextView
        android:id="@+id/fullscreen_text_question"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:translationY="150dp"
        android:keepScreenOn="true"
        android:text="@string/question"
        android:textAppearance="?android:attr/textAppearanceLarge" 
	    android:textColor="#fff" 
	    android:textStyle="bold"     
        />
    <!-- text for Ready to Go -->    
    <TextView
        android:id="@+id/fullscreen_text_ready2go"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:translationY="150dp"
        android:keepScreenOn="true"
        android:text="@string/ready2go"
        android:textAppearance="?android:attr/textAppearanceLarge" 
	    android:textColor="#fff" 
	    android:textStyle="bold"
	     android:visibility="gone"     
        />
    <!-- text for question -->    
    <TextView
        android:id="@+id/fullscreen_text_clickplay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:translationY="100dp"
        android:keepScreenOn="true"
        android:text="@string/clickplay"
        android:textAppearance="?android:attr/textAppearanceLarge" 
	    android:textColor="#fff" 
	    android:textStyle="bold"
	    android:visibility="gone"     
        />
    
    <Chronometer
	        android:id="@+id/chronometer1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
            android:translationY="320dp"
	        android:text="Chronometer" />

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" 
         >
         
     	<ImageView
     	    android:id="@+id/img_ans1"
     	    android:layout_width="60dp"
     	    android:layout_height="60dp"
     	    android:layout_gravity="left|center"
     	    android:layout_marginTop="50dp"
     	    android:layout_weight="1"
     	    android:contentDescription="@string/element_1"
     	    android:src="@drawable/aa01" />

	    <ImageView
	        android:id="@+id/img_ans2"
	        android:layout_width="60dp"
	        android:layout_height="60dp"
	        android:layout_gravity="center"
	        android:layout_weight="1"
	        android:contentDescription="@string/element_2"
	        android:src="@drawable/aa02" />
	
	    <ImageView
	        android:id="@+id/img_ans3"
	        android:layout_width="60dp"
	        android:layout_height="60dp"
	        android:layout_gravity="right|center"
	        android:layout_weight="1"
	        android:contentDescription="@string/element_3"
	        android:src="@drawable/aa03" />
	
	    <ImageView
	        android:id="@+id/img_ans4"
	        android:layout_width="60dp"
	        android:layout_height="60dp"
	        android:layout_gravity="center"
	        android:layout_weight="1"
	        android:contentDescription="@string/element_4"
	        android:src="@drawable/aa04" />
	    <!--
	    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:background="#0fff" >
	        
			    <ImageSwitcher 
			        android:id="@+id/imageSwitcher1" 
			        android:layout_width="wrap_content" 
			        android:layout_height="wrap_content"
			         />
			       
			    <TextView 
			        android:id="@+id/textView1" 
			        android:layout_width="wrap_content" 
			        android:layout_height="wrap_content" 
			        android:layout_gravity="center_vertical|center_horizontal|center" 
			        android:layout_marginLeft="5dp" 
			        android:text="3 Right Turn on the Light \n 5 Right Play a Song \n 8 Right Shake Hands \n 10 Right Rotate Propeller " 
			        android:textAppearance="?android:attr/textAppearanceLarge" 
			        android:textColor="#fff" android:textStyle="bold" 
			        />
			    
	 	</LinearLayout>
       
        <HorizontalScrollView
	        android:id="@+id/horizontalScrollView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1" >

	            <LinearLayout 
	                android:id="@+id/layout1" 
	                android:layout_width="match_parent" 
	                android:layout_height="match_parent" 
	                android:orientation="horizontal"
	             />
            
            
    	</HorizontalScrollView>

          -->
         
	    
         
    </LinearLayout>
<!--
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_linearlayout"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" 
             >

            <Button
                android:id="@+id/setting_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/setting_button"
                android:textAppearance="?android:attr/textAppearanceLarge" 
	            android:textColor="#fff" 
	            android:textStyle="bold"
                 />
            
            
            
            <Button
                android:id="@+id/play_type_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/play_type_button"
                android:textAppearance="?android:attr/textAppearanceLarge" 
	            android:textColor="#fff" 
	            android:textStyle="bold"
                 />
            
            <Button
                android:id="@+id/history_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/history_button"
                android:textAppearance="?android:attr/textAppearanceLarge" 
	            android:textColor="#fff" 
	            android:textStyle="bold"
                 />
            
            
            
        </LinearLayout>
    </FrameLayout>
-->
    
    
</FrameLayout>
